[package]
name = "rustwasm-cf-paste"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.11"
serde_json = "1.0.67"
console_error_panic_hook = { version = "0.1.1", optional = true }
rand = { version = "0.8.5", features = ["serde"] }
getrandom = { version = "0.2.8", features = ["js"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
