[package]
name = "rustwasm-cf-paste"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = "0.0.13"
serde_json = "1.0.67"
console_error_panic_hook = { version = "0.1.1", optional = true }
rand = { version = "0.8.5", features = ["serde"] }
getrandom = { version = "0.2.8", features = ["js"] }
serde = { version = "1.0.152", features = ["derive", "serde_derive"] }
anyhow = "1.0.69"
http = "0.2.9"
tinytemplate = "1.2.1"
mime = "0.3.16"
syntect = {version = "5.0.0", default-features = false, features = ["default-fancy"]}

[build]
command = "cargo install -q worker-build && worker-build --release"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
